# MaayuBAI24-25

./: .gitignore  README.md  pyproject.toml  requirements.txt  users_data.json
app/: main.py  settings.py
backend/: README.md  pyproject.toml
chromadb/: chroma.sqlite3
frontend/: .gitignore  README.md  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json
frontend-deprecated/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
json/: Anirudh_Anirudh_AA692039_62.json  BABETHA_SUBRAMANI_BS1075_551.json  BALA_REDDY_BR1127_178.json  Bruce_Majdi_BM1013_579.json  Chaitanya_Krishna_CK1704806_103557.json  Dar_Ali_DA1715687_1.json  Dinesh_Pasam_DP1720160.json  Goverdhan_Rajalingamgari_GR1720185.json  Hari_K_HK1526_601.json  Hema_H_HH1627101_8.json  Jatin_Qa Analyst_JQ345815_16.json  Jay_Dutta_JD247536_2.json  Jay_Newlin_JN473364.json  Jay_Patel_JP472388.json  Jay_Patel_JP473187_6.json  Jayant_Jena_JJ474119.json  Jayaprakash_Venkappa_JV436545.json  Jayshree_Solanki_JS472874.json  Jeannie_Klepper_JK472386.json  Kalyan_Moharar_KM633679_7.json  Kween_Krakue_KK1015_1022.json  Linda_Miller_LM1015_1023.json  Madhuri_Y_MY1719958.json  Mallikarjuna_G_MG1720141_4.json  PRASANNA_M_PM1066_778.json  Raghunadha_Dornala_RD1014_898.json  ResumeSanketDoddabendigere.json  Revathi_N_RN1066_775.json  SATYAPRAKASHAKHILESH_SINGH_SS1376_572.json  Steve_Belbot_SB1025_2254.json  Sumit_DFAL_SD1378_723.json  Sunitha_Vaikunta_SV1631376.json  Supraja_M_SM1604230_1.json  Supriya_Baddam_SB1632702.json  Suraj_Gantyala._SG1561434_1.json  Suraj_Nammi_SN1632300.json  Suresh_k_SK1633056_2.json  (+7 more)
(+264 files in other folders)
