[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.15.1",
    "fastapi[standard]>=0.112.1",
    "langchain-google-genai>=2.1.2",
    "langchain-mcp-adapters>=0.0.7",
    "langgraph>=0.3.25",
    "openai>=1.71.0",
    "pydantic-settings>=2.8.1",
    "qdrant-client>=1.13.3",
    "rich>=13.7.1",
    "structlog>=25.2.0",
]
